# rs-lm-studio-api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
examples/: chat_completion.rs  chat_completion_streaming.rs  embedding_test.rs
src/: error.rs  lib.rs  main.rs  prelude.rs
src/chat/: chat.rs  choice.rs  context.rs  delta.rs  message.rs  mod.rs  model.rs  request.rs  response.rs  role.rs  stream.rs  usage.rs
src/embedding/: embed_data.rs  embed_model.rs  embed_request.rs  embed_response.rs  embed_usage.rs  embedding.rs  input.rs  mod.rs
