[package]
name = "lm-studio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
futures-util = "0.3.31"
macron = "0.1.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
