[package]
name = "lm-studio-api"
description = "This API is designed for interacting with LM Studio"
keywords = ["LM Studio", "API", "AI"]
categories = ["development-tools"]
version = "0.1.0"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-lm-studio-api"
readme = "README.md"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
futures-util = "0.3.31"
macron = "0.1.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
