[package]
name = "lm-studio-api-extended"
description = "Unofficial Rust client for LM Studio with text embedding support."
keywords = ["LM-Studio", "LMStudio", "API", "AI"]
categories = ["development-tools"]
version = "0.1.1"
license = "MIT"
authors = ["Patrik Fejes <fejespatrik7@gmail.com>"]
repository = "https://github.com/pmrch/rs-lm-studio-api"
readme = "README.md"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
futures-util = "0.3.31"
macron = { version = "0.1.0", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
anyhow = "1.0.98"
